- slow start for implementation of tensors